Kapcsolatfelvétel aloldal frissítése.

--- a/src/pages/kapcsolatfelvetel.html
+++ b/src/pages/kapcsolatfelvetel.html
@@ -2,16 +2,24 @@
     <h5 class="text-center">Elérhetőségeink</h5>
     <div class="callout">
         <div class="grid-x grid-margin-x">
-            <div class="cell large-6">
+            <div class="cell text-center">
+            <p><img src="{{root}}assets/img/general-f-logo-smaller.png" style="width:  100px; vertical-align:middle;" alt=""> Kereskedelmi és szolgáltató Kft.  </p>
+        </div>
+            <div class="cell large-7">
+            
                 <div class="callout">
-                    <p><span style="color: #ef7d00;">Cím:</span> 1091 Bp. Üllői út 69.<br>
-                        <span style="color: #ef7d00;">e-mail cím:</span><a href="mailto:iroda@general-f.hu">iroda@general-f.hu</a><br>
-                        <span style="color: #ef7d00;">Telefonszám:</span> <a href="phone:+3612168802">+36 1 216 8802</a> </p>
+                    <p><span style="color: #ef7d00;">Cím:</span> 1091 Budapest Üllői út 69. üzlet 1.<br>
+                        <span style="color: #ef7d00;">Levelezési cím:</span> Generál-F Kft. 1450 Budapest Pf. 64. <br>
+                        <span style="color: #ef7d00;">Telefonszám/fax szám:</span> <a href="phone:+3612168802">+36 1 216 8802</a> <br>
+                        <span style="color: #ef7d00;">e-mail cím:</span><a href="mailto:iroda@general-f.hu">iroda@general-f.hu</a>
+                    </p>
                 </div>
             </div>
-            <div class="cell large-6">
+            <div class="cell large-5">
                 <div class="callout">
                     <p><span style="color: #ef7d00;">Iroda nyitva tartása:</span><br>Hétfőtől csütörtökig: 8-16 óráig <br>Pénteken: 8-12 óráig</p>
+                    <p><span style="color: #ef7d00;">Éjszakai, hétvégi műszaki ügyeleti telefonszám:</span><br><a href="phone:+36 305569530">+36 30 556 9530</a>
+                    </p>
                 </div>
             </div>
         </div>
